--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,19 +7,24 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/itemsView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="75dp"/>
 
-    <androidx.appcompat.widget.AppCompatButton
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabs"
         android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:id="@+id/button_main_add"
-        app:layout_constraintBottom_toBottomOf="@+id/itemsView"
-        android:text="@string/button_add"
-        android:background="@color/purple_500"
-        android:textSize="20sp"/>
+        android:layout_height="60dp"
+        app:tabMode="fixed"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tabIndicatorColor="#ffc107"
+        app:tabSelectedTextColor="#ffffff"
+        app:tabTextColor="#b38baaef" />
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/pages"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+
+</FrameLayout>
