--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
+    tools:context=".MainActivity"
+    android:orientation="vertical">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabs"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         app:tabMode="fixed"
         app:layout_constraintTop_toTopOf="parent"
         app:tabIndicatorColor="#ffc107"
-        app:tabSelectedTextColor="#ffffff"
         app:tabTextColor="#b38baaef" />
+
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/pages"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-
-
-
-
-
-
-</FrameLayout>
+</LinearLayout>
